syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "HumanresPositionProto";
option objc_class_prefix = "HumanresPosition";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";
import "relay.proto";

// flat-ent: EmplPosition Type
message EmplPositionTypeFlatData {
    option (routines.entity_type) = "EmplPositionType";
    option (routines.keys).keys = "empl_position_type_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: emplPositionTypeId
        
    string empl_position_type_id = 1 [json_name = "empl_position_type_id", (google.api.graphql.relay_options).id = true];    
    string parent_type_id = 2 [json_name = "parent_type_id"];    
    routines.Indicator has_table = 3 [json_name = "has_table"];    
    string description = 4 [json_name = "description"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 5 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 6 [json_name = "created_tx_stamp"];    
    string tenant_id = 7 [json_name = "tenant_id"]; 

    // extra
    google.protobuf.Struct extra = 16;
    map<string, google.protobuf.Any> attachments = 17 ;
}

message EmplPositionTypeList{
    repeated EmplPositionTypeFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListEmplPositionTypes` method to retrieve the next
    // page of results.
    string next_page_token = 2;
}

